force-app/main/default/objects/Kit_de_Garagem__c/Kit_de_Garagem__c.object-meta.xml
<CustomObject>
    <description>Objeto Kit de Garagem estão relacionados com objeto Vagas.</description>
    <label>Kit de Garagem</label>
    <nameField>
        <label>Kit de Garagem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kits de Garagem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>