force-app/main/default/objects/Kit_de_Garagem__c/fields/C_Custo_Engenharia__c.field-meta.xml
<CustomField>
    <fullName>C_Custo_Engenharia__c</fullName>
    <label>C. Custo Engenharia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>