force-app/main/default/objects/Kit_de_Garagem__c/fields/Codigo_do_bloco__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_bloco__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Código de Bloco relacionado a esse Kit de Garagem</inlineHelpText>
    <label>Código do Bloco</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Kits de Garagem</relationshipLabel>
    <relationshipName>Kits_de_Garagem</relationshipName>
    <type>Lookup</type>
</CustomField>