force-app/main/default/objects/Kit_de_Garagem__c/fields/Data_de_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Lancamento__c</fullName>
    <label>Data de Lançamento</label>
    <type>Date</type>
</CustomField>