force-app/main/default/objects/Kit_de_Garagem__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Usado para definir e especificar qual empreendimento está relacionado a esse kit</description>
    <inlineHelpText>Empreendimento relacionado a esse Kit de Garagem</inlineHelpText>
    <label>Empreendimento</label>
    <referenceTo>Enterprise__c</referenceTo>
    <relationshipLabel>Kits de Garagem</relationshipLabel>
    <relationshipName>Kits_de_Garagem</relationshipName>
    <type>Lookup</type>
</CustomField>