force-app/main/default/objects/Kit_de_Garagem__c/fields/Filial__c.field-meta.xml
<CustomField>
    <fullName>Filial__c</fullName>
    <label>Filial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>