force-app/main/default/objects/Kit_de_Garagem__c/fields/Fracao_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Fracao_Fiscal__c</fullName>
    <label>Fração Fiscal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>