force-app/main/default/objects/Kit_de_Garagem__c/fields/Fracao_Fiscal_Terreno__c.field-meta.xml
<CustomField>
    <fullName>Fracao_Fiscal_Terreno__c</fullName>
    <label>Fração Fiscal Terreno</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>