force-app/main/default/objects/Kit_de_Garagem__c/fields/Fracao_Ideal__c.field-meta.xml
<CustomField>
    <fullName>Fracao_Ideal__c</fullName>
    <label>Fração Ideal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>