force-app/main/default/objects/Kit_de_Garagem__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Campo onde registra o nome do kit criado</description>
    <inlineHelpText>Insira o nome do kit</inlineHelpText>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>