force-app/main/default/objects/Kit_de_Garagem__c/fields/Observa_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o__c</fullName>
    <label>Observação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>