force-app/main/default/objects/Kit_de_Garagem__c/fields/Tipo_de_Estrutura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Estrutura__c</fullName>
    <label>Tipo de Estrutura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>