force-app/main/default/objects/Kit_de_Garagem__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>